# vaner

./: .clinerules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  vaner.py  work.py
.claude-plugin/: marketplace.json
.cursor/: mcp.json
.cursor/rules/: github-workflow-guardrails.mdc  vaner.mdc
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  SECURITY.md  actionlint.yaml  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actionlint.yml  auto-merge.yml  build-vscode-extension.yml  ci.yml  cockpit-a11y.yml  codeql.yml  creds-tripwire.yml  docker-release.yml  fuzz.yml  labels.yml  lock-threads.yml  moat-guard.yml  publish-vscode-extension.yml  release-drafter.yml  release.yml  retro-sign-release.yml  rust.yml  scorecard.yml  semantic-pr.yml  stale.yml  validate-claude-plugin.yml
apps/repo-analyzer/: .env.example  langgraph.json  pyproject.toml
apps/repo-analyzer/src/analyzer/: __init__.py  graph.py  watcher.py
apps/repo-analyzer/src/repo_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/studio-agent/: .env.example  pyproject.toml
apps/supervisor/: .env.example  langgraph.json  pyproject.toml
apps/vaner-daemon/: .env.example  pyproject.toml
apps/vaner-daemon/scripts/: post-checkout  post-commit
apps/vaner-daemon/src/: proxy.py
apps/vaner-daemon/src/vaner_daemon/: __init__.py  cli.py  config.py  daemon.py  eval_workflow.py  event_collector.py  state_engine.py
apps/vaner-daemon/src/vaner_daemon/preparation_engine/: __init__.py  engine.py  generator.py  graph.py  module_summarizer.py  planner.py  symbol_tracer.py  triggers.py
apps/vaner-daemon/src/vaner_daemon/proxy/: __init__.py  server.py
apps/vaner-daemon/tests/: test_artefact_store_integration.py  test_config.py  test_crash_recovery.py  test_eval.py  test_event_collector.py  test_module_summarizer.py  test_preparation_engine.py  test_proxy.py  test_state_engine.py  test_symbol_tracer.py  test_vaner_status.py
crates/vaner-contract/: Cargo.toml  README.md
crates/vaner-contract/examples/: export_bindings.rs
crates/vaner-contract/src/: enums.rs  errors.rs  handoff.rs  http.rs  lib.rs  models.rs  reducer.rs  setup.rs  sse.rs  ts.rs
crates/vaner-contract/tests/: conformance.rs
devtools/: repo_hygiene.py
docs/: 0.8.6-gap-analysis.md  agent-architecture.md  architecture.md  build-spec-supervisor.md  build-spec-two-agent.md  changelog.md  claude-plugin.md  cockpit-dogfood-report.md  cockpit.md  concepts.md  configuration.md  editor-integration.md  mcp-migration.md  memory-semantics.md  openssf-best-practices.md  performance.md  quickstart.md  roadmap.md  security-assessment.md  security.md  skills-integration.md  threat-model.md  vaner_report.docx
docs/0.8.3/: desktop-hand-off.md
docs/benchmarks/: 0.8.0-validation.md  0.8.3-deep-run-validation.md  0.8.4-deep-run-infra.md  README.md
docs/reviews/: 0.8.4-hardening.md
docs/testing/: 2026-04-v0.6.0-install-findings.md  2026-04-v0.6.1-install-findings.md
eval/: README.md  ab_results.json  run_ab_test.py
eval/cases/: default.json
eval/synthetic/: generate_cases.py  weak_label.py
examples/basic-usage/: README.md
examples/cloud-agent/: README.md
examples/docker/: README.md
examples/multi-agent-cursor/: README.md
examples/multi-backend/: README.md
examples/ollama-local/: README.md
examples/openai-proxy/: README.md
examples/python-sdk/: README.md
examples/skills-loop/: README.md
ide/vscode/: README.md  package-lock.json  package.json
libs/vaner-runtime/: pyproject.toml
libs/vaner-tools/: pyproject.toml
libs/vaner-tools/src/vaner_tools/: __init__.py  artefact_store.py  paths.py  repo_tools.py  scoring.py
libs/vaner-tools/src/vaner_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libs/vaner-tools/tests/: test_scoring.py
plugins/vaner/: .mcp.json
requirements/: ci.in  ci.txt  fuzz.in  fuzz.txt  release-smoke.in  release-smoke.txt  release.in  release.txt  runtime.in  runtime.txt
scripts/: bump-plugin-version.sh  install.sh  sync-plugin-primer.sh  sync-plugin-skill.sh  sync_agents_primer.py
src/vaner/: __init__.py  _version.py  api.py  engine.py  engine_legacy.py  eval.py  eval_legacy.py  paths.py  server.py  server_legacy.py
tasks/: artifact_sqlite.md  editor_proxy.md  issue_1.md  prep_engine.md  proxy_cli.md  proxy_daemon.md  proxy_server.md  reliability.md  supervisor.md
tests/: conftest.py  test_api.py  test_cli_profile.py  test_corpus_awareness.py  test_cross_corpus_retrieval.py  test_engine.py  test_engine_pinned_wiring.py  test_eval_report.py  test_eval_runner.py  test_learning_reward.py  test_mcp_backend_guard.py  test_moat_guard.py  test_paths.py  test_ponder_cap.py  test_replay_regression.py  test_store_intent_divergence.py  test_store_learning_state.py  test_store_pinned_facts.py
tests/conformance-fixtures/: README.md  adopt_response_minimal.json  adopt_response_rich.json  predictions_active_sample.json  predictions_single_sample.json  setup_answers_sample.json  setup_deep_run_defaults_sample.json  setup_hardware_profile_sample.json  setup_selection_sample.json
tests/fuzz/: __init__.py  fuzz_translate.py
tests/test_broker/: test_assembler.py  test_compressor.py  test_selector.py
tests/test_cli/: test_clients_subcommand.py  test_cloud_cost_gate.py  test_cockpit_commands.py  test_config.py  test_config_generic_setter.py  test_config_keys.py  test_config_set_list_value.py  test_config_show.py  test_config_show_handles_paths.py  test_daemon.py  test_daemon_port.py  test_deep_run.py  test_distill_skill.py  test_doctor.py  test_doctor_release_probe.py  test_doctor_runtime.py  test_eval.py  test_explain.py  test_forget.py  test_hardware_detection.py  test_help_grouping.py  test_init.py  test_init_wizard.py  test_init_wizard_other_client.py  test_inspect.py  (+16 more)
(+476 files in other folders)
