# Rust workspace — sibling to pyproject.toml.
#
# Python tooling (hatch, pytest, ruff) ignores this file. Rust tooling
# (cargo, clippy, rust-analyzer) uses it as the workspace root.
#
# The Python daemon remains the source of truth for the contract; this
# workspace ships a Rust crate (`vaner-contract`) whose types mirror the
# daemon's response shapes 1:1 so downstream desktop clients (Tauri on
# Linux/Windows) consume one canonical integration layer. The macOS Swift
# client does not compile against this crate — it consumes the same JSON
# conformance fixtures produced here. See `docs/vaner-contract.md` (TODO)
# for the cross-language contract policy.

[workspace]
resolver = "2"
members = ["crates/vaner-contract"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Borgels/Vaner"
authors = ["Vaner Contributors"]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
futures     = "0.3"
bytes       = "1"
tempfile    = "3"
xdg         = "2"
dirs        = "5"
ts-rs       = { version = "10", features = ["serde-compat"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# `pedantic` is opt-in locally (`cargo clippy -- -W clippy::pedantic`) but
# not enforced in CI — too many stylistic hits to baseline without
# running locally first. Promote once the crate is stable.
