[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaner"
version = "0.1.0"
description = "Predictive context middleware layer for AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Borgels Olsen Holding ApS" },
]
keywords = ["ai", "context", "middleware", "developer-tools"]
dependencies = [
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "typer>=0.12",
  "watchdog>=4.0",
  "pydantic>=2.7",
  "tiktoken>=0.7",
  "uvicorn>=0.30",
  "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pip-licenses>=5.0",
]

[project.scripts]
vaner = "vaner.cli.main:run"

[project.urls]
Homepage = "https://github.com/Borgels/Vaner"
Repository = "https://github.com/Borgels/Vaner"
Issues = "https://github.com/Borgels/Vaner/issues"
Documentation = "https://github.com/Borgels/Vaner/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/vaner"]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
mypy_path = "src"
