[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaner"
version = "0.1.0"
description = "Predictive context middleware layer for AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Borgels Olsen Holding ApS" },
]
keywords = ["ai", "context", "middleware", "developer-tools"]
dependencies = [
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "typer>=0.12",
  "watchdog>=4.0",
  "pydantic>=2.7",
  "numpy>=1.26",
  "lightgbm>=4.5",
  "tiktoken>=0.7",
  "uvicorn>=0.30",
  "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-randomly>=3.15",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.8",
  "pip-audit>=2.7",
  "pip-licenses>=5.0",
]
llm = [
]
embeddings = [
  "sentence-transformers>=3.0",
  "torch>=2.3",
]
training = [
  "torch>=2.3",
  "xgboost>=2.1",
  "catboost>=1.2",
]
mcp = [
  "mcp[cli]>=1.0",
  "starlette>=0.40",
]
all = [
  "sentence-transformers>=3.0",
  "torch>=2.3",
  "mcp[cli]>=1.0",
  "starlette>=0.40",
]

[project.scripts]
vaner = "vaner.cli.main:run"

[project.urls]
Homepage = "https://github.com/Borgels/Vaner"
Repository = "https://github.com/Borgels/Vaner"
Issues = "https://github.com/Borgels/Vaner/issues"
Documentation = "https://docs.vaner.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/vaner"]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "T20"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --ignore=tests/fuzz"
markers = [
  "slow: long-running integration tests",
  "integration: tests that hit external systems",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["vaner.__init__", "vaner.server", "vaner.cli.main"]
strict = true

[tool.coverage.run]
source = ["src/vaner"]
omit = [
  "src/vaner/cli/commands/app.py",
  "src/vaner/engine.py",
  "src/vaner/eval.py",
  "src/vaner/intent/frontier.py",
  "src/vaner/mcp/server.py",
  "src/vaner/server.py",
  "src/vaner/store/artefacts.py",
]
