[project]
name = "repo-analyzer"
version = "0.1.0"
description = "Background repo analyzer agent for Vaner."
requires-python = ">=3.10"
dependencies = [
    "langchain-ollama>=0.2.0",
    "langgraph>=1.0.0",
    "vaner-tools",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
