[project]
name = "vaner-daemon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0",
    "langchain-ollama>=0.1",
    "langgraph>=0.2",
    "langgraph>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
