[project]
name = "vaner-tools"
version = "0.1.0"
description = "Shared tools and artefact store for Vaner agents."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
